welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:21: error: not enough arguments for method setY: (x$1: Int)Unit.
Unspecified value parameter x$1.
  		{if (estFaceMur()) {numeroterSol(); setPos(0, setY()+1)}}
                                                                  ^